:art:(plugins): Fixes switch alignment issue in #1743

--- a/static/components/switch.less
+++ b/static/components/switch.less
@@ -5,13 +5,14 @@
   box-shadow: inset 0 1px 1.5px rgba(0,0,0,0.3);
   background-color: @gray-light;
   position: relative;
-  display:inline-block;
-  height:21px;
-  width:40px;
+  display: inline-block;
+  vertical-align: middle;
+  height: 21px;
+  width: 40px;
 
   .handle {
-    border-radius:14px;
-    width:25px;
+    border-radius: 14px;
+    width: 25px;
     height: 25px;
     position: absolute;
     top: -2px;
